crates/plotnik-tests/tests/04-emit/types/naming/error_capture_type_conflicts_with_match_only_definition.txt
Foo = {
  (expression_statement)
  (debugger_statement)
}

Q = (program
  {
    (lexical_declaration) @d
  } @x :: Foo
)
------------------ DIAGNOSTICS -------------------
error: type name `Foo` is already used for a different type
 --> query.ptk:9:11
  |
1 | / Foo = {
2 | |   (expression_statement)
3 | |   (debugger_statement)
4 | | }
  | |_- already used here
...
9 |     } @x :: Foo
  |             ^^^
